# yolo-scout

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: autofix.yml  cd.yml  ci.yml  docs.yml
docs/: embeddings.md
yolo_scout/embeddings/: computer.py  preprocessing.py
