[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "yolo-scout"
dynamic = ["version"]
description = "YOLO Dataset Quality Analysis Tool powered by FiftyOne"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Alexis Schutzger" }]
keywords = ["yolo", "dataset", "quality", "fiftyone", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "fiftyone>=1.13.4",
    "open_clip_torch>=3.3.0",
    "transformers>=4.57.6",
    "timm>=1.0.25",
    "numpy>=2.0.2",
    "Pillow>=11.3.0",
    "shapely>=2.0.7",
    "PyYAML>=6.0.3",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.11",
    "numba>=0.59.0",
    "opencv-python-headless>=4.13.0.92",
]

[project.urls]
Homepage = "https://github.com/picsalex/yolo-dataset-quality-analysis"
Repository = "https://github.com/picsalex/yolo-dataset-quality-analysis"
Issues = "https://github.com/picsalex/yolo-dataset-quality-analysis/issues"

[project.scripts]
yolo-scout = "yolo_scout.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
docs = [
    "zensical",
    "mkdocstrings[python]",
    "pymdown-extensions",
]


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "yolo_scout/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["yolo_scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
    "requires_dataset: marks tests that require dataset download",
]
addopts = "--strict-markers --tb=short -v"

[tool.ruff]
line-length = 120
exclude = [
    "yolo_scout/_version.py",
]
